--- a/assets/css/membership.css
+++ b/assets/css/membership.css
@@ -1,5 +1,5 @@
 html body {
-    font-family: 'Bree Serif', serif;
+    font-family: 'Bree Serif', sans-serif;
     background-color: #181a3d;
 }
 
